small coloring bug on mobile views

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -53,7 +53,6 @@
 @media screen and (max-width: 650px) {
     .container {
         height: auto;
-        background-color: var(--primary);
         position: static;
     }
 
